package com.protection.proxy;

/**
 * 12/set/2022
 * @author andrebronca
 */
public interface ReportGeneratorProxy {
  public String generateDailyReport();
}
